--- a/WeatherApp/src/components/ui/searchCityForm/styles/index.module.scss
+++ b/WeatherApp/src/components/ui/searchCityForm/styles/index.module.scss
@@ -1,2 +1,2 @@
 @import "./screens/mobile/mobile.module.css";
-@import "./screens/desctop/desctop.module.css"; // .serchForm {
+@import "./screens/desctop/desctop.module.css";
