--- a/WeatherApp/src/components/ui/searchCityForm/styles/screens/desctop/desctop.module.scss
+++ b/WeatherApp/src/components/ui/searchCityForm/styles/screens/desctop/desctop.module.scss
@@ -1,5 +1,5 @@
 @media (min-width: 992px) {
-  .serchForm {
+  .searchForm {
     height: 100%;
     border-bottom: 2px solid white;
     width: 100%;
