--- a/WeatherApp/src/components/ui/searchCityForm/styles/screens/mobile/mobile.module.css
+++ b/WeatherApp/src/components/ui/searchCityForm/styles/screens/mobile/mobile.module.css
@@ -1,32 +1,32 @@
 @media (min-width: 375px) {
-  .serchForm {
+  .searchForm {
     border-bottom: 2px solid white;
     width: 100%;
   }
-  .serchForm input {
+  .searchForm input {
     background: none;
     width: 80%;
     color: rgba(255, 255, 255, 0.7);
     font-size: 5vw;
     border: none;
   }
-  .serchForm input:focus {
+  .searchForm input:focus {
     outline: none;
   }
-  .serchForm input::-moz-placeholder {
+  .searchForm input::-moz-placeholder {
     font-size: 3.5vw;
     color: rgba(255, 255, 255, 0.7);
   }
-  .serchForm input::placeholder {
+  .searchForm input::placeholder {
     font-size: 3.5vw;
     color: rgba(255, 255, 255, 0.7);
   }
-  .serchForm button {
+  .searchForm button {
     width: 18%;
     background: none;
     border: none;
   }
-  .serchForm button img {
+  .searchForm button img {
     width: 100%;
   }
 }/*# sourceMappingURL=mobile.module.css.map */
