--- a/WeatherApp/src/components/ui/authenticationForm/styles/screens/desctop/desctop.module.css
+++ b/WeatherApp/src/components/ui/authenticationForm/styles/screens/desctop/desctop.module.css
@@ -6,6 +6,7 @@
     justify-content: space-around;
     width: 50%;
     height: 50%;
+    border: 2px solid black;
   }
   .authFormContainer .inputWrap {
     border-bottom: 2px solid rgb(255, 255, 255);
@@ -26,7 +27,9 @@
     text-align: right;
   }
   .authFormContainer .inputWrap .input {
-    color: rgb(255, 255, 255);
+    /* color: rgb(255, 255, 255); */
+        color: black;
+
     text-align: start;
     width: 85%;
     height: 80%;
