--- a/WeatherApp/src/components/ui/registrationForm/styles/desctop/desctop.module.css
+++ b/WeatherApp/src/components/ui/registrationForm/styles/desctop/desctop.module.css
@@ -28,8 +28,10 @@
   }
   .registerFormContainer .inputWrap .input {
     font-size: 0.9rem;
-    color: rgb(255, 255, 255);
-    border: none;
+    /* color: rgb(255, 255, 255); */
+    /* border: none; */
+    border: 1px solid black;
+    color: black;
     text-align: start;
     width: 70%;
     height: 80%;
